// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`unpack-texture-description file selection should refuse a name the description does not carry 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Execution of command 'unpack-texture-description' failed, error: Texture processing error: Expected requested files to be described in <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, not found: no_such_file, available: ui\\ui_test_sheet",
  ],
  "stdout": [
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/unknown, parallel - false",
  ],
}
`;

exports[`unpack-texture-description file selection should unpack every described file 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/all, parallel - false",
    "Unpacking for 1 files",
    "Unpacked 1 files",
  ],
}
`;

exports[`unpack-texture-description file selection should unpack only the named file, in parallel 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/selected, parallel - true",
    "Unpacking for 1 files",
    "Unpacked 1 files",
  ],
}
`;

exports[`unpack-texture-description file selection should write the expected files 1`] = `
[
  {
    "path": "all/ui/ui_test_sheet/ui_test_end.dds",
    "sha256": "a07cacbd97c81a6cff05eb1955b121bbef7b4aabf8443512e7cf13a7527aae6e",
    "size": 4244,
  },
  {
    "path": "all/ui/ui_test_sheet/ui_test_left.dds",
    "sha256": "8465624c2cad1d2486054856003ee6d275f53a36113059c36b972d512a1b44aa",
    "size": 4244,
  },
  {
    "path": "all/ui/ui_test_sheet/ui_test_mid.dds",
    "sha256": "b01ac10e62d9f2c72831f0c1c5e44960e305cf869dbf33b1c5308047a23a5c26",
    "size": 4244,
  },
  {
    "path": "all/ui/ui_test_sheet/ui_test_right.dds",
    "sha256": "49a5d63e0a75800599731341c7b078d1b97028e12a6d956f9bd5152e16f493b3",
    "size": 4244,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_end.dds",
    "sha256": "a07cacbd97c81a6cff05eb1955b121bbef7b4aabf8443512e7cf13a7527aae6e",
    "size": 4244,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_left.dds",
    "sha256": "8465624c2cad1d2486054856003ee6d275f53a36113059c36b972d512a1b44aa",
    "size": 4244,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_mid.dds",
    "sha256": "b01ac10e62d9f2c72831f0c1c5e44960e305cf869dbf33b1c5308047a23a5c26",
    "size": 4244,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_right.dds",
    "sha256": "49a5d63e0a75800599731341c7b078d1b97028e12a6d956f9bd5152e16f493b3",
    "size": 4244,
  },
]
`;
